--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
     overflow: hidden;
 }
 
+.video-mobile {
+  display: none;
+}
+
 .main {
     display: flex;
     justify-content: center;
@@ -60,7 +64,6 @@ body {
     background: black;
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1)
   }
   
@@ -87,7 +90,7 @@ body {
   }
 
   .content p{
-    font-size: 1.6em;
+    font-size: 1.4em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   
@@ -107,3 +110,37 @@ body {
   .card:hover .front-content p {
     opacity: 0;
   }
+
+  @media only screen and (max-width: 768px) {
+  #video_fondo {
+      display: none;
+  }
+  .video-mobile {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    overflow: hidden;
+}
+.video-mobile video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+} 
+.front-content p {
+  color: #e8e8e8;
+}
+  
+}
